--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
   box-sizing: border-box;
   justify-self: center;
   line-height: 1.8;
+  margin: 0;
   padding: var(--site-padding);
   width: min(70ch, 100%);
 
