--- a/css/styles.css
+++ b/css/styles.css
@@ -293,10 +293,12 @@ hr {
 }
 
 .site__menu-item {
+  align-items: center;
   border: 2px solid hsl(from var(--c-darker) h s l);
   border-radius: .6em;
   color: hsl(from var(--c-lighter) h s l);
-  display: inline-block;
+  display: inline-flex;
+  gap: .5em;
   padding: .2em .5em;
   text-decoration: none;
 
@@ -318,8 +320,7 @@ hr {
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 1px;
-  vertical-align: -.15rem;
-  width: 18px;
+  width: 1.125rem;
 }
 
 
