Improve copy, remove anchor, improve abbr

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,14 +94,18 @@ body {
   }
 }
 
-:not(a) > abbr[title]:hover {
-  color: hsl(from var(--c-light) h s l);
-  cursor: help;
-  text-decoration-color: hsl(from var(--c-dark) h s l);
-  text-decoration-line: underline;
-  text-decoration-style: wavy;
-  text-underline-offset: 3px;
-  text-decoration-thickness: 2px;
+:not(a) > abbr[title] {
+    text-decoration-color: hsl(from var(--c-darker) h s l);
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-underline-offset: 3px;
+    text-decoration-thickness: 2px;
+
+  &:hover {
+    color: hsl(from var(--c-light) h s l);
+    cursor: help;
+    text-decoration-color: hsl(from var(--c-dark) h s l);
+  }
 }
 
 a {
